--- a/portfolio-frontend/index.html
+++ b/portfolio-frontend/index.html
@@ -4,10 +4,42 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image" href="/profile.jpg"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Portfolio</title>
+    <meta name="twitter:card" content="summary_large_image" />
+<meta name="twitter:title" content="Deepak Kushwah | Full Stack Developer Portfolio" />
+<meta name="twitter:description" content="Official portfolio of Deepak Kushwah – MERN Stack Developer." />
+<meta name="twitter:image" content="https://deepakkhiraofficial.netlify.app/profile.jpg" />
+<meta name="twitter:site" content="@mrdeepakkushwah" />
+<meta name="twitter:creator" content="@mrdeepakkushwah" />
+    <meta name="theme-color" content="#000000" />
+    <!-- inside <head> -->
+<title>Deepak Kushwah | Full Stack Developer Portfolio</title>
+<meta name="description" content="Official portfolio of Deepak Kushwah – Full Stack Developer specializing in MERN stack, Node.js, React, MongoDB.">
+<meta name="keywords" content="Deepak Kushwah, Full Stack Developer, MERN Developer, React, Node.js, MongoDB, Portfolio">
+<meta name="author" content="Deepak Kushwah">
+<meta property="og:title" content="Deepak Kushwah | Full Stack Developer Portfolio">
+<meta property="og:description" content="Official site of Deepak Kushwah – MERN stack developer.">
+<meta property="og:image" content="https://deepakkhiraofficial.netlify.app/profile.jpg">
+<meta property="og:url" content="https://deepakkhiraofficial.netlify.app">
+<meta name="robots" content="index, follow">
+<link rel="canonical" href="https://deepakkhiraofficial.netlify.app">
+
   </head>
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "Person",
+        "name": "Deepak Kushwah",
+        "jobTitle": "Full Stack Developer",
+        "url": "https://deepakkhiraofficial.netlify.app",
+        "sameAs": [
+          "https://github.com/mrdeepakkushwah",
+          "https://www.linkedin.com/in/mrdeepakkushwah/"
+        ]
+      }
+      </script>
+      
   </body>
 </html>
