--- a/portfolio-frontend/index.html
+++ b/portfolio-frontend/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <meta name="google-site-verification" content="googledffb49dd5bd0a4ec.html" />
     <link rel="icon" type="image" href="/profile.jpg"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="twitter:card" content="summary_large_image" />
