--- a/portfolio-frontend/index.html
+++ b/portfolio-frontend/index.html
@@ -2,32 +2,54 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="google-site-verification" content="googledffb49dd5bd0a4ec.html" />
-    <link rel="icon" type="image" href="/profile.jpg"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="twitter:card" content="summary_large_image" />
-<meta name="twitter:title" content="Deepak Kushwah | Full Stack Developer Portfolio" />
-<meta name="twitter:description" content="Official portfolio of Deepak Kushwah – MERN Stack Developer." />
-<meta name="twitter:image" content="https://deepakkhiraofficial.netlify.app/profile.jpg" />
-<meta name="twitter:site" content="@mrdeepakkushwah" />
-<meta name="twitter:creator" content="@mrdeepakkushwah" />
-    <meta name="theme-color" content="#000000" />
-    <!-- inside <head> -->
-<title>Deepak Kushwah | Full Stack Developer Portfolio</title>
-<meta name="description" content="Official portfolio of Deepak Kushwah – Full Stack Developer specializing in MERN stack, Node.js, React, MongoDB.">
-<meta name="keywords" content="Deepak Kushwah, Full Stack Developer, MERN Developer, React, Node.js, MongoDB, Portfolio">
-<meta name="author" content="Deepak Kushwah">
-<meta property="og:title" content="Deepak Kushwah | Full Stack Developer Portfolio">
-<meta property="og:description" content="Official site of Deepak Kushwah – MERN stack developer.">
-<meta property="og:image" content="https://deepakkhiraofficial.netlify.app/profile.jpg">
-<meta property="og:url" content="https://deepakkhiraofficial.netlify.app">
-<meta name="robots" content="index, follow">
-<link rel="canonical" href="https://deepakkhiraofficial.netlify.app">
 
+    <!-- Preconnect and Preload Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="preload" as="style" href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&family=Poppins:wght@400;500;600&display=swap">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&family=Poppins:wght@400;500;600&display=swap" media="print" onload="this.media='all'">
+    <noscript>
+      <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&family=Poppins:wght@400;500;600&display=swap">
+    </noscript>
+
+    <!-- Favicon -->
+    <link rel="icon" type="image/jpeg" href="/profile.jpg"/>
+
+    <!-- SEO Meta Tags -->
+    <title>Deepak Kushwah | Full Stack Developer Portfolio</title>
+    <meta name="description" content="Official portfolio of Deepak Kushwah – Full Stack Developer specializing in MERN stack, Node.js, React, MongoDB.">
+    <meta name="keywords" content="Deepak Kushwah, Full Stack Developer, MERN Developer, React, Node.js, MongoDB, Portfolio">
+    <meta name="author" content="Deepak Kushwah">
+    <meta name="robots" content="index, follow">
+    <link rel="canonical" href="https://deepakkhiraofficial.netlify.app">
+
+    <!-- Open Graph (Facebook, LinkedIn) -->
+    <meta property="og:title" content="Deepak Kushwah | Full Stack Developer Portfolio">
+    <meta property="og:description" content="Official site of Deepak Kushwah – MERN stack developer.">
+    <meta property="og:image" content="https://deepakkhiraofficial.netlify.app/profile.jpg">
+    <meta property="og:url" content="https://deepakkhiraofficial.netlify.app">
+    <meta property="og:type" content="website" />
+
+    <!-- Twitter Card -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="Deepak Kushwah | Full Stack Developer Portfolio">
+    <meta name="twitter:description" content="Official portfolio of Deepak Kushwah – MERN Stack Developer.">
+    <meta name="twitter:image" content="https://deepakkhiraofficial.netlify.app/profile.jpg">
+    <meta name="twitter:site" content="@mrdeepakkushwah">
+    <meta name="twitter:creator" content="@mrdeepakkushwah">
+
+    <!-- Theme Color -->
+    <meta name="theme-color" content="#000000">
+
+    <!-- Google Site Verification (this must be an actual code from Search Console) -->
+    <meta name="google-site-verification" content="w82R7WzR0qzxSW09B13a2lToFEPFSOjkp7-U9SEIPMc" />
   </head>
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
+
+    <!-- JSON-LD Structured Data -->
     <script type="application/ld+json">
       {
         "@context": "https://schema.org",
@@ -40,7 +62,6 @@
           "https://www.linkedin.com/in/mrdeepakkushwah/"
         ]
       }
-      </script>
-      
+    </script>
   </body>
 </html>
