--- a/portfolio-frontend/index.html
+++ b/portfolio-frontend/index.html
@@ -52,6 +52,7 @@
       gtag('js', new Date());
       gtag('config', 'G-TFG7RLW117');
     </script>
+    <script id="Cookiebot" src="https://consent.cookiebot.com/uc.js" data-cbid="bdebe67a-4dba-475e-b460-709b3c850aba" type="text/javascript" async></script>
   </head>
   <body>
     <div id="root"></div>
