--- a/portfolio-frontend/index.html
+++ b/portfolio-frontend/index.html
@@ -1,23 +1,32 @@
 <!doctype html>
 <html lang="en">
   <head>
+    <!-- Charset and Viewport -->
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <!-- Preconnect and Preload Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link rel="preload" as="image" href="/profile.jpg" />
     <link rel="preload" as="style" href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&family=Poppins:wght@400;500;600&display=swap">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&family=Poppins:wght@400;500;600&display=swap" media="print" onload="this.media='all'">
     <noscript>
       <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&family=Poppins:wght@400;500;600&display=swap">
     </noscript>
 
-    <!-- Favicon -->
-    <link rel="icon" type="image/jpeg" href="/profile.jpg"/>
+    <!-- Preload Image -->
+    <link
+      rel="preload"
+      as="image"
+      href="/profile.jpg"
+      imagesrcset="/profile.jpg 1x, /profile@2x.jpg 2x"
+      imagesizes="(max-width: 768px) 100vw, 371px"
+    />
 
-    <!-- SEO Meta Tags -->
+    <!-- Favicon -->
+    <link rel="icon" type="image/jpeg" href="/profile.jpg" />
+
+    <!-- Title and Description -->
     <title>Deepak Kushwah | Full Stack Developer Portfolio</title>
     <meta name="description" content="Official portfolio of Deepak Kushwah – Full Stack Developer specializing in MERN stack, Node.js, React, MongoDB.">
     <meta name="keywords" content="Deepak Kushwah, Full Stack Developer, MERN Developer, React, Node.js, MongoDB, Portfolio">
@@ -25,7 +34,7 @@
     <meta name="robots" content="index, follow">
     <link rel="canonical" href="https://deepakkhiraofficial.netlify.app">
 
-    <!-- Open Graph (Facebook, LinkedIn) -->
+    <!-- Open Graph Tags -->
     <meta property="og:title" content="Deepak Kushwah | Full Stack Developer Portfolio">
     <meta property="og:description" content="Official site of Deepak Kushwah – MERN stack developer.">
     <meta property="og:image" content="https://deepakkhiraofficial.netlify.app/profile.jpg">
@@ -40,17 +49,15 @@
     <meta name="twitter:site" content="@mrdeepakkushwah">
     <meta name="twitter:creator" content="@mrdeepakkushwah">
 
-    <!-- Theme Color -->
+    <!-- Theme and Verification -->
     <meta name="theme-color" content="#000000">
-
-    <!-- Google Site Verification (this must be an actual code from Search Console) -->
     <meta name="google-site-verification" content="w82R7WzR0qzxSW09B13a2lToFEPFSOjkp7-U9SEIPMc" />
-  
   </head>
   <body>
     <div id="root">
       <div class="skeleton-loader"></div>
     </div>
+
     <script type="module" src="/src/main.jsx"></script>
 
     <!-- JSON-LD Structured Data -->
