--- a/portfolio-frontend/index.html
+++ b/portfolio-frontend/index.html
@@ -52,6 +52,22 @@
     <!-- Theme and Verification -->
     <meta name="theme-color" content="#000000">
     <meta name="google-site-verification" content="w82R7WzR0qzxSW09B13a2lToFEPFSOjkp7-U9SEIPMc" />
+
+    <link 
+  rel="preload" 
+  as="image" 
+  href="/profile.jpg" 
+  imagesrcset="/profile.jpg 1x, /profile@2x.jpg 2x" 
+  imagesizes="(max-width: 768px) 100vw, 371px" 
+/>
+<link 
+  rel="preload" 
+  as="image" 
+  href="/profile.webp" 
+  imagesrcset="/profile.webp 1x, /profile@2x.webp 2x" 
+  imagesizes="(max-width: 768px) 100vw, 371px" 
+/>
+
   </head>
   <body>
     <div id="root">
