--- a/portfolio-frontend/index.html
+++ b/portfolio-frontend/index.html
@@ -82,6 +82,17 @@
         "description": "Full Stack Developer specializing in MERN stack, JavaScript, and building scalable web applications."
       }
     </script>
+    <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-TFG7RLW117"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-TFG7RLW117');
+</script>
+
+    <script id="Cookiebot" src="https://consent.cookiebot.com/uc.js" data-cbid="bdebe67a-4dba-475e-b460-709b3c850aba" type="text/javascript" async></script>
   </head>
   
   <body>
