--- a/portfolio-frontend/index.html
+++ b/portfolio-frontend/index.html
@@ -83,16 +83,15 @@
       }
     </script>
     <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-TFG7RLW117"></script>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-JRNX5YVSSL"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', 'G-TFG7RLW117');
+  gtag('config', 'G-JRNX5YVSSL');
 </script>
-
-    <script id="Cookiebot" src="https://consent.cookiebot.com/uc.js" data-cbid="bdebe67a-4dba-475e-b460-709b3c850aba" type="text/javascript" async></script>
   </head>
   
   <body>
@@ -100,7 +99,7 @@
       <div class="skeleton-loader"></div>
     </div>
 
-    <script type="module" src="/src/main.jsx"></script>
+    <script type="module" src="/src/main.jsx"></>
 
     <!-- JSON-LD Structured Data -->
     <script type="application/ld+json">
