--- a/portfolio-frontend/index.html
+++ b/portfolio-frontend/index.html
@@ -99,7 +99,7 @@
       <div class="skeleton-loader"></div>
     </div>
 
-    <script type="module" src="/src/main.jsx"></>
+    <script type="module" src="/src/main.jsx"></script>
 
     <!-- JSON-LD Structured Data -->
     <script type="application/ld+json">
