index.html updated

--- a/portfolio-frontend/index.html
+++ b/portfolio-frontend/index.html
@@ -64,6 +64,7 @@
     <!-- <meta name="google-site-verification" content="w82R7WzR0qzxSW09B13a2lToFEPFSOjkp7-U9SEIPMc" /> -->
     <meta name="google-site-verification" content="Jb6VMgHrRgThb8hFPRBbEzznu9XxFzWjf9X0L-aUfuw" />
 
+    <script src="https://analytics.ahrefs.com/analytics.js" data-key="ADVUW2df4T3EAg+SNXSwhw" async></script>
 
     <!-- Structured Data (JSON-LD) -->
     <script type="application/ld+json">
